<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:iosched="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.shaaan.pcipharmd.FourthYear"
    tools:showIn="@layout/activity_fourth_year">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="30dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            iosched:cardPreventCornerOverlap="false">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tp3"
            android:padding="10dp"
            style="@style/AppTheme.Button"
            android:background="@android:color/transparent"
            android:id="@+id/tp3"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            iosched:cardPreventCornerOverlap="false">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/toxicology"
            android:padding="10dp"
            style="@style/AppTheme.Button"
            android:background="@android:color/transparent"
            android:id="@+id/toxicology"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            iosched:cardPreventCornerOverlap="false">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hp"
            android:padding="10dp"
            style="@style/AppTheme.Button"
            android:background="@android:color/transparent"
            android:id="@+id/hp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            iosched:cardPreventCornerOverlap="false">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cp"
            android:padding="10dp"
            style="@style/AppTheme.Button"
            android:background="@android:color/transparent"
            android:id="@+id/cp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            iosched:cardPreventCornerOverlap="false">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/biopharm"
            android:padding="10dp"
            style="@style/AppTheme.Button"
            android:background="@android:color/transparent"
            android:id="@+id/biopharm"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            iosched:cardPreventCornerOverlap="false">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/biostat"
            android:padding="10dp"
            style="@style/AppTheme.Button"
            android:background="@android:color/transparent"
            android:id="@+id/biostat"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
