<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:iosched="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="100dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.shaaan.pcipharmd.ThirdYear"
    tools:showIn="@layout/activity_third_year">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            iosched:cardPreventCornerOverlap="false">

            <Button
                android:id="@+id/tp2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/tp2"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            iosched:cardPreventCornerOverlap="false">

            <Button
                android:id="@+id/juris"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/juris"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/nativeCard_31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            iosched:cardPreventCornerOverlap="false">

            <!--  This is your template view -->
            <com.google.android.ads.nativetemplates.TemplateView
                android:id="@+id/native_ad_31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:gnt_template_type="@layout/gnt_small_template_view" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            iosched:cardPreventCornerOverlap="false">

            <Button
                android:id="@+id/analysis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/analysis"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            iosched:cardPreventCornerOverlap="false">

            <Button
                android:id="@+id/formulation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/formulation"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/nativeCard_32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            iosched:cardPreventCornerOverlap="false">

            <!--  This is your template view -->
            <com.google.android.ads.nativetemplates.TemplateView
                android:id="@+id/native_ad_32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:gnt_template_type="@layout/gnt_small_template_view" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            iosched:cardPreventCornerOverlap="false">

            <Button
                android:id="@+id/mchem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/mchem"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            iosched:cardPreventCornerOverlap="false">

            <Button
                android:id="@+id/pharmac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/pharmac"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/nativeCard_33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            iosched:cardCornerRadius="@dimen/card_corner_radius"
            iosched:cardElevation="@dimen/card_elevation"
            iosched:cardPreventCornerOverlap="false">

            <!--  This is your template view -->
            <com.google.android.ads.nativetemplates.TemplateView
                android:id="@+id/native_ad_33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:gnt_template_type="@layout/gnt_small_template_view" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
